...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RouteScreen">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/routeScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical"
        android:layout_below="@id/backToMainMenuButton"
...
