<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeamRouteScreen">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/teamRouteScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:background="@android:color/darker_gray"
        android:scrollbars="vertical"
        android:layout_below="@id/backToMainMenuButtonFromTeam"
        />

    <Button
        android:id="@+id/backToMainMenuButtonFromTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go Back To Main Menu" />

    <Button
        android:id="@+id/current_proposed_walk_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/backToMainMenuButtonFromTeam"
        android:text="Current Proposed Walk" />

</RelativeLayout>